--- a/examples/with-jest/.babelrc
+++ b/examples/with-jest/.babelrc
@@ -1,14 +1,9 @@
 {
+  "presets": "next/babel",
   "env": {
-    "development": {
-      "presets": "next/babel"
-    },
-    "production": {
-      "presets": "next/babel"
-    },
     "test": {
       "presets": [
-        ["env", { "modules": "commonjs" }],
+        "env",
         "next/babel"
       ]
     }
