Load Next/Babel first in .babelrc - This is inspired by @arunoda in https://github.com/zeit/next.js/issues/2499#issuecomment-313825024

--- a/examples/with-jest/.babelrc
+++ b/examples/with-jest/.babelrc
@@ -3,8 +3,8 @@
   "env": {
     "test": {
       "presets": [
-        "env",
-        "next/babel"
+        "next/babel",
+        ["env", { "modules": "commonjs" }]
       ]
     }
   }
